--- a/mystyle.sty
+++ b/mystyle.sty
@@ -110,6 +110,7 @@
 \newcommand{\Ran}{\mathrm{Ran}}
 \newcommand{\aCart}{\mathrm{aCart}}
 \newcommand{\N}{\mathrm{N}}
+\newcommand{\NN}{\mathbb{N}}
 \newcommand{\C}{\mathfrak{C}}
 \newcommand{\Nsc}{\mathrm{N}_{\mathrm{sc}}}
 \newcommand{\Csc}{\mathfrak{C}^{\mathrm{sc}}}
