--- a/segal_spaces.tex
+++ b/segal_spaces.tex
@@ -18,7 +18,7 @@
 
     \item A wide subcategory $\category{R}_{-}$; and
 
-    \item A function $d\colon \ob(\category{R}) \to \N$ called the \emph{degree};
+    \item A function $d\colon \ob(\category{R}) \to \NN$ called the \emph{degree};
   \end{enumerate}
   subject to the following constraints:
   \begin{enumerate}
