--- a/sources.bib
+++ b/sources.bib
@@ -135,4 +135,20 @@
   subtitle  = {(Ph.D. thesis)},
 }
 
+@ARTICLE{2021arXiv210205192R,
+       author = {{Rasekh}, Nima},
+        title = "{Quasi-Categories vs. Segal Spaces: Cartesian Edition}",
+      journal = {arXiv e-prints},
+     keywords = {Mathematics - Category Theory, Mathematics - Algebraic Topology, 18N60, 18N40, 18N45, 18N55},
+         year = 2021,
+        month = feb,
+          eid = {arXiv:2102.05192},
+        pages = {arXiv:2102.05192},
+archivePrefix = {arXiv},
+       eprint = {2102.05192},
+ primaryClass = {math.CT},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv210205192R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
