--- a/cocart_fibs.tex
+++ b/cocart_fibs.tex
@@ -5,7 +5,7 @@
 \section{Cocartesian fibrations between Segal spaces}
 \label{sec:cocartesian_fibrations_between_complete_segal_spaces}
 
-The classical Grothendieck construction allows us to repackage the data of a pseudofunctor $r\colon \category{D} \to \Cat$ into a so-called \emph{cocartesian fibration} $p\colon \category{R} \to \category{D}$. The values of $r$ are encoded in the fibers of $p$ over $\category{D}$. The functoriality is encoded by certain morphisms in the total space $\category{R}$, called \emph{cocartesian morphisms.} These morphisms have the following property: \emph{given a commuting triangle in $\category{D}$, and a left horn lying over it in $\category{R}$ whose first edge is cocartesian, there is a unique filling of the horn to a full simplex lying over the triangle.}
+The classical Grothendieck construction allows us to repackage the data of a pseudofunctor $r\colon \category{D} \to \Cat$ into a so-called \emph{cocartesian fibration} $p\colon \category{R} \to \category{D}$. The values of $r$ are encoded in the fibers of $p$ over $\category{D}$. The functoriality of $r$ is encoded by certain morphisms in the total space $\category{R}$, called \emph{cocartesian morphisms.} These morphisms have the following property: \emph{given a commuting triangle in $\category{D}$, and a left horn lying over it in $\category{R}$ whose first edge is cocartesian, there is a unique filling of the horn to a full simplex lying over the triangle.}
 \begin{equation*}
   \label{eq:cocartesian_def}
   \begin{tikzcd}[row sep=tiny]
