--- a/introduction.tex
+++ b/introduction.tex
@@ -146,7 +146,7 @@ Our proof is more homotopy-theoretic in character, relying on the fact that for 
 \subsection{Relation to previous work}
 \label{ssc:relation_to_previous_work}
 
-The main result of this paper is a new, simplified proof of the main theorem of \cite{spectralmackeyfunctors1}, leveraging the theory of cocartesian morphisms between Segal spaces.
+The main result of this paper is a new, simplified proof of the main theorem of \cite{spectralmackeyfunctors1}, leveraging the theory of cocartesian morphisms in Segal spaces.
 
 Our definition of a cocartesian fibration between Segal spaces is not new, although the form in which it is presented is original. The definition was first written down by De Brito in \cite{2016arXiv160500706B}, and expanded by Rasekh in \cite{rasekhcartesianfibrations}, and later in \cite{2021arXiv210205192R}. Here, Rasekh proves the existence and equivalence of several model structures for cocartesian fibrations of Segal spaces, including one in terms of marked bisimplicial sets (this did not exist when this paper was written). 
 
